# ocaml_of_ts

./: flake.nix
nix/: default.nix  ocaml-tree-sitter.nix  overlay.nix  shell-tree-sitter.patch  shell.nix
parser/lib/: Boilerplate.ml  CST.ml  Parse.ml  Parse.mli  bindings.c  dune
